--- a/FoodCollector/Login.storyboard
+++ b/FoodCollector/Login.storyboard
@@ -175,9 +175,10 @@
                                 <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePicShadow" translatesAutoresizingMaskIntoConstraints="NO" id="dzH-0l-AmO">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dxo-gT-dYA" userLabel="Shadow View">
                                 <rect key="frame" x="240" y="183" width="120" height="120"/>
-                            </imageView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePic" translatesAutoresizingMaskIntoConstraints="NO" id="PJm-M2-67b">
                                 <rect key="frame" x="240" y="183" width="120" height="120"/>
                                 <constraints>
@@ -193,7 +194,7 @@
                                 </constraints>
                                 <state key="normal" title="Button" image="StartButton"/>
                                 <connections>
-                                    <action selector="stRTButtonClicked:" destination="dMW-7T-n7P" eventType="touchUpInside" id="ZyA-ze-pvr"/>
+                                    <action selector="startButtonClicked:" destination="dMW-7T-n7P" eventType="touchUpInside" id="55Y-O2-ynV"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PhoneFieldBG" translatesAutoresizingMaskIntoConstraints="NO" id="n2t-ru-LGF">
@@ -205,6 +206,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54h-Bi-Khi">
                                 <rect key="frame" x="401" y="482" width="22" height="22"/>
+                                <color key="tintColor" red="0.85490196080000003" green="0.85490196080000003" blue="0.85490196080000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="infoButtonClicked:" destination="dMW-7T-n7P" eventType="touchUpInside" id="7TX-sV-MSA"/>
                                 </connections>
@@ -235,15 +237,15 @@
                             <constraint firstItem="C3i-Ho-WWH" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="bottom" constant="121" id="0Ei-a9-xzd"/>
                             <constraint firstItem="54h-Bi-Khi" firstAttribute="top" secondItem="n2t-ru-LGF" secondAttribute="bottom" constant="-32" id="0nI-Gw-Ih7"/>
                             <constraint firstItem="PJm-M2-67b" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="4fU-mA-rY6"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="top" id="5Qs-Nf-dVu"/>
+                            <constraint firstItem="dxo-gT-dYA" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="top" id="5Qs-Nf-dVu"/>
                             <constraint firstItem="3EE-Tz-mV3" firstAttribute="centerY" secondItem="n2t-ru-LGF" secondAttribute="centerY" id="5aF-HO-Q1R"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="leading" secondItem="PJm-M2-67b" secondAttribute="leading" id="8cJ-O8-vuK"/>
+                            <constraint firstItem="dxo-gT-dYA" firstAttribute="leading" secondItem="PJm-M2-67b" secondAttribute="leading" id="8cJ-O8-vuK"/>
                             <constraint firstItem="n2t-ru-LGF" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="A0z-oA-RFM"/>
                             <constraint firstItem="3EE-Tz-mV3" firstAttribute="leading" secondItem="n2t-ru-LGF" secondAttribute="trailing" constant="-225" id="BEy-zt-2Wj"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="bottom" id="KoC-Nj-wHZ"/>
+                            <constraint firstItem="dxo-gT-dYA" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="bottom" constant="-120" id="KoC-Nj-wHZ"/>
                             <constraint firstItem="3EE-Tz-mV3" firstAttribute="top" secondItem="n2t-ru-LGF" secondAttribute="bottom" constant="-36" id="L4H-Fl-2UY"/>
                             <constraint firstItem="PJm-M2-67b" firstAttribute="top" relation="greaterThanOrEqual" secondItem="t1q-kn-co8" secondAttribute="bottom" constant="16" id="LcP-F9-nRb"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="height" secondItem="PJm-M2-67b" secondAttribute="height" id="Mai-6u-N1d"/>
+                            <constraint firstItem="dxo-gT-dYA" firstAttribute="height" secondItem="PJm-M2-67b" secondAttribute="height" id="Mai-6u-N1d"/>
                             <constraint firstItem="W74-CB-TCi" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="ODy-U9-CmE"/>
                             <constraint firstItem="afR-fK-UnF" firstAttribute="top" secondItem="n2t-ru-LGF" secondAttribute="bottom" constant="12" id="Wwj-bF-EEm"/>
                             <constraint firstItem="4Jx-64-mlK" firstAttribute="top" secondItem="afR-fK-UnF" secondAttribute="bottom" constant="32" id="YQ0-kC-pk1"/>
@@ -251,20 +253,17 @@
                             <constraint firstItem="54h-Bi-Khi" firstAttribute="leading" secondItem="n2t-ru-LGF" secondAttribute="trailing" constant="-34" id="dtE-m4-qSY"/>
                             <constraint firstItem="glP-XC-z6n" firstAttribute="bottom" secondItem="PJm-M2-67b" secondAttribute="bottom" id="eng-xs-nRa"/>
                             <constraint firstItem="afR-fK-UnF" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="g4V-PG-mj4"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="top" secondItem="PJm-M2-67b" secondAttribute="bottom" id="iuh-Qc-qH5"/>
                             <constraint firstItem="glP-XC-z6n" firstAttribute="leading" secondItem="PJm-M2-67b" secondAttribute="trailing" id="kaW-qK-Zsx"/>
                             <constraint firstItem="n2t-ru-LGF" firstAttribute="top" secondItem="C3i-Ho-WWH" secondAttribute="bottom" constant="27" id="mDj-L1-Jqo"/>
                             <constraint firstItem="t1q-kn-co8" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="nEe-Gn-JLd"/>
                             <constraint firstItem="t1q-kn-co8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="W74-CB-TCi" secondAttribute="bottom" constant="16" id="srr-cQ-71d"/>
                             <constraint firstItem="C3i-Ho-WWH" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="thn-18-lPD"/>
-                            <constraint firstItem="dzH-0l-AmO" firstAttribute="width" secondItem="PJm-M2-67b" secondAttribute="width" id="ttU-au-nKU"/>
+                            <constraint firstItem="dxo-gT-dYA" firstAttribute="width" secondItem="PJm-M2-67b" secondAttribute="width" id="ttU-au-nKU"/>
                             <constraint firstItem="3EE-Tz-mV3" firstAttribute="leading" secondItem="n2t-ru-LGF" secondAttribute="trailing" constant="-225" id="vCJ-6A-gjb"/>
                             <constraint firstItem="C3i-Ho-WWH" firstAttribute="centerX" secondItem="SeZ-QG-g0z" secondAttribute="centerX" id="zOc-mo-fql"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="KoC-Nj-wHZ"/>
-                                <exclude reference="iuh-Qc-qH5"/>
                                 <exclude reference="BEy-zt-2Wj"/>
                                 <exclude reference="L4H-Fl-2UY"/>
                             </mask>
@@ -274,16 +273,18 @@
                     <connections>
                         <outlet property="cellPhoneField" destination="3EE-Tz-mV3" id="ASk-KY-eeH"/>
                         <outlet property="profilePic" destination="PJm-M2-67b" id="9Fn-80-deT"/>
+                        <outlet property="profilePicShadowView" destination="dxo-gT-dYA" id="DPo-pX-OGq"/>
+                        <outlet property="userIdentityProviderName" destination="t1q-kn-co8" id="xcQ-nb-7eq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dS3-fZ-Dbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1645" y="1167"/>
         </scene>
-        <!--Login Navigation Controller-->
+        <!--Identity Provider Login Navigation Controller-->
         <scene sceneID="Ay5-O1-gzJ">
             <objects>
-                <navigationController storyboardIdentifier="LoginNavVC" automaticallyAdjustsScrollViewInsets="NO" id="THF-2H-DF0" userLabel="Login Navigation Controller" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="IdentityProviderLoginNavVC" automaticallyAdjustsScrollViewInsets="NO" id="THF-2H-DF0" userLabel="Identity Provider Login Navigation Controller" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1RF-hs-kky">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -298,10 +299,10 @@
             </objects>
             <point key="canvasLocation" x="922.5" y="439.5"/>
         </scene>
-        <!--Phone Number Navigation Controller-->
+        <!--Phone Number Login Navigation Controller-->
         <scene sceneID="Ged-WE-YKM">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Nbc-C9-NWa" userLabel="Phone Number Navigation Controller" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="PhoneNumberLoginNavVC" automaticallyAdjustsScrollViewInsets="NO" id="Nbc-C9-NWa" userLabel="Phone Number Login Navigation Controller" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="BsZ-Vg-1Sv">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -316,6 +317,40 @@
             </objects>
             <point key="canvasLocation" x="922" y="1167"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="NnH-83-ekh">
+            <objects>
+                <viewController id="My1-Rw-sbv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BlE-Od-T0O"/>
+                        <viewControllerLayoutGuide type="bottom" id="4Hj-Ie-cFz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5bf-2z-iMj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JAR-jk-lwR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ZxE-Dv-7Q3">
+            <objects>
+                <viewController id="T7A-O2-ddR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MJg-Ou-GYx"/>
+                        <viewControllerLayoutGuide type="bottom" id="v2j-YM-lK1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yrq-BT-jTT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XiF-Mg-8cA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
     <resources>
         <image name="FacebookLogin" width="270" height="42"/>
@@ -324,7 +359,6 @@
         <image name="PhoneFieldBG" width="270" height="42"/>
         <image name="ProfileChangeImageIcon" width="25" height="20"/>
         <image name="ProfilePic" width="120" height="120"/>
-        <image name="ProfilePicShadow" width="128" height="128"/>
         <image name="StartButton" width="270" height="42"/>
     </resources>
 </document>
